# get-papers-list-subhi

./: README.md  cli.py  output.csv  pyproject.toml
get_papers_list/: fetch.py
